--- a/css/estilo.css
+++ b/css/estilo.css
@@ -118,13 +118,19 @@ body{
 
 @media (max-width: 1100px){
     .container{
-        flex-direction: column;     
-        flex-wrap: nowrap;
+        flex-direction: column;
+        height: 40vh;
+        margin-top: 3rem;
         justify-content: center;
-        height: 100vh;
-        margin-top: 0;
+        align-items: center;
+        border: solid rgb(0, 135, 0) 1px;
     }
     .container .textos{
         margin-bottom: 5rem;
+        border: solid rgb(0, 23, 116) 1px;
+    }
+
+    .form{
+        border: solid 1px red;
     }
 }
