--- a/css/estilo.css
+++ b/css/estilo.css
@@ -119,8 +119,6 @@ body{
 @media (max-width: 1100px){
     .container{
         flex-direction: column;
-        height: 40vh;
-        margin-top: 3rem;
         justify-content: center;
         align-items: center;
         border: solid rgb(0, 135, 0) 1px;
@@ -128,9 +126,60 @@ body{
     .container .textos{
         margin-bottom: 5rem;
         border: solid rgb(0, 23, 116) 1px;
+
     }
 
     .form{
-        border: solid 1px red;
+        margin: 0 auto;
+        width: 600px;
+        height: 450px;
+        padding-top: 3rem;
+        border-radius: 10px;
+        border: 1px solid #e8e8e9;
+        box-shadow: 0px 8px 32px rgba(153,153,153,0.30);
+        background: #fff;
+        text-align: center;
+    }
+
+    .form a{
+        display: block;
+        text-decoration: none;
+        color: #1877f2;
+        font-size: 18px;
+        margin-bottom: 20px;
+        width: 100%;
+    }
+
+    .form input{
+        width: 500px;
+        height: 52px;
+        background: #fff;
+        padding: 14px 16px;
+        font-size: 20px;
+        margin-bottom: 20px;
+        border-radius: 8px;
+        border: none;
+        border: 1px solid #e4e3e3;
+    }
+
+    .formresp{
+        justify-content: center;
+        align-items: center;
+        margin: 0 auto;
+        width: 100%;
+        height: 50%;
+        border: solid 1px rgb(0, 255, 17);
+        text-align: center; /* Alinea el contenido al centro del eje x */
+    }
+
+    .textos p{
+        color: #1C1E21;
+        font-size: 40px;
+        font-weight: 500;
+        line-height: 40px;
+    }
+
+    .textos{
+        width: 80%;
     }
 }
