--- a/css/estilo.css
+++ b/css/estilo.css
@@ -121,12 +121,9 @@ body{
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        border: solid rgb(0, 135, 0) 1px;
     }
     .container .textos{
         margin-bottom: 5rem;
-        border: solid rgb(0, 23, 116) 1px;
-
     }
 
     .form{
@@ -151,11 +148,11 @@ body{
     }
 
     .form input{
-        width: 500px;
-        height: 52px;
+        width: 520px;
+        height: 65px;
         background: #fff;
         padding: 14px 16px;
-        font-size: 20px;
+        font-size: 25px;
         margin-bottom: 20px;
         border-radius: 8px;
         border: none;
@@ -168,7 +165,6 @@ body{
         margin: 0 auto;
         width: 100%;
         height: 50%;
-        border: solid 1px rgb(0, 255, 17);
         text-align: center; /* Alinea el contenido al centro del eje x */
     }
 
@@ -181,5 +177,12 @@ body{
 
     .textos{
         width: 80%;
+    }
+
+    .afuera, .afuera span{
+        margin-left: 10px;
+        font-size: 20px;
+        text-align: center;
+        margin-top: 25px;
     }
 }
